[tool.poetry]
name = "karte"
version = "0.1.0"
description = ""
authors = ["Matt Cannizzaro <matt@asserts.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
prometheus-flask-exporter = "^0.18.1"
gunicorn = "^20.0.4"
requests = "^2.25.1"
Flask-APScheduler = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
