[tool.poetry]
name = "karte"
version = "0.1.0"
description = ""
authors = ["Matt Cannizzaro <matt@asserts.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
prometheus-flask-exporter = "^0.18.1"
gunicorn = "^20.0.4"
requests = "^2.32.0"
Flask-APScheduler = "^1.11.0"
JSON-log-formatter = "^0.3.1"
kubernetes = "^17.17.0"
pytz = "^2021.1"
SQLAlchemy = "^1.4.25"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
